# OpenMosaic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
ci/: environment-3.7.yml  environment-3.8.yml
examples/: minimal_framework.ipynb  plotting.ipynb  process_full_conus.py  process_hwt_batch_dask.py
examples/full_application/: build_batches  process_batches
src/openmosaic/: README.md  __init__.py  _c_routines.pyx  gridding.py  io.py  processing.py  routines.py  storage.py  utils.py
src/openmosaic/calculations/: __init__.py  core.py  gridded.py  radial.py
src/openmosaic/calculations/_routines/: dvad.py  echotops.py  finite_difference.py  hail.py  llsd.py
src/openmosaic/core/: __init__.py  generate.py  serialization.py
src/openmosaic/core/_gridding/: _PENDING_REMOVAL_vendored.py  __init__.py  routines.py
src/openmosaic/executors/: __init__.py  base.py  dask.py  python.py
src/openmosaic/geo/: __init__.py  nexrad.py
src/openmosaic/grid/: __init__.py  coordinates.py  definition.py  standard.py
src/openmosaic/gridding/: _PENDING_REMOVAL_gridder.py  __init__.py  _gate_to_grid_map.pyx  _map_gates_to_subgrid.pyx  combined.py  grid_definition.py  grid_utils.py  gridder.py  routines.py  utils.py  vendored.py
src/openmosaic/loaders/: S3.py  __init__.py  core.py
src/openmosaic/patterns/: __init__.py  base.py
src/openmosaic/patterns/_loaders/: RDA.py  S3.py  __init__.py
src/openmosaic/recipes/: __init__.py  base.py
src/openmosaic/testing/: __init__.py  rankine.py
tests/: test_all.py  test_gridding.py  test_init.py  test_io.py  test_processing.py  test_routines.py  test_utils.py
