[metadata]
name = OpenMosaic
description = Open-source and extensible NEXRAD mosaic creation and feature extration in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = OpenMoasic Developers
author_email = openmosaic@thielen.science
maintainer = Jon Thielen
maintainer_email = openmosaic@thielen.science
license = Apache
license-file = LICENSE
classifiers =
	Development Status :: 1 - Planning
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
url = https://github.com/jthielen/OpenMosaic

[options]
zip_safe = True
package_dir =
	= src
packages = find:
include_package_data = True
setup_requires =
	setuptools >= 41.2
	setuptools_scm
python_requires = >=3.7
install_requires =
	setuptools >= 41.2
	numpy >= 1.17.1
	xarray >= 0.15.1
	pint >= 0.13
	metpy >= 0.12.2
	cartopy >= 0.18.0
	pandas >= 1.0
	netCDF4 >= 1.5.3
	zarr >= 2.4
	arm-pyart >= 1.11.1
	wradlib >= 1.7.3
	requests >= 0.24.0
	numba >= 0.50.1
	dask >= 2.20.0

[options.packages.find]
where = src

[options.extras_require]
dev = ipython[all]>=3.1
doc = sphinx; pydata-sphinx-theme; matplotlib>=3.2.2
test = pytest>=5.4.3; flake8>=3.8.3; black>=19.9; isort>=5.0.7

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all-files = True

[pycodestyle]
max-line-length = 95

[flake8]
max-line-length = 95
ignore =
    E203
    E402
    E501
    E731
    W503
exclude=
    .eggs
    docs

[isort]
default_section = THIRDPARTY
known_first_party = openmosaic
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 95

[tool:pytest]
python_files = test_*.py
testpaths = tests
